refactor TripTest: remove explicit TripStatus from constructor calls - rely on Trip constructor default status (ACTIVE) for new trips